--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "vite": "^5.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
